--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,17 @@ code {
 
 .nav-link {
 	color: #ffffff !important;
-	font-size: 14px;
 	letter-spacing: 34;
 	padding: 0.5rem 0;
+}
+
+.offcanvas-body svg {
+	width: 1.125rem !important;
+	height: 1em;
+	margin-left: 20px;
+}
+
+a[aria-expanded="true"] {
+	background-color: #4c4695;
+	width: 100%;
 }
