--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@ code {
 }
 
 .dropdown-menu {
-	position: fixed !important;
+	position: absolute !important;
 	left: 0 !important;
-	width: 50.2% !important;
+	width: 100% !important;
 	background-color: #4c4695 !important;
 	border-radius: 0 !important;
 }
@@ -33,4 +33,14 @@ code {
 a[aria-expanded="true"] {
 	background-color: #4c4695;
 	width: 100%;
+}
+
+svg {
+	stroke: blue;
+	fill: white !important;
+}
+
+.QG-background {
+	background-image: url("./assets/footer/QG-Pattern-with-bckgrnd-01.jpg") !important;
+	background-size: cover;
 }
