--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ code {
 		monospace;
 }
 
+/* navbar */
 .dropdown-menu {
 	position: absolute !important;
 	left: 0 !important;
@@ -33,6 +34,7 @@ code {
 a[aria-expanded="true"] {
 	background-color: #4c4695;
 	width: 100%;
+	margin-bottom: 190px !important;
 }
 
 svg {
@@ -40,6 +42,7 @@ svg {
 	fill: white !important;
 }
 
+/* footer */
 .QG-background {
 	background-image: url("./assets/footer/QG-Pattern-with-bckgrnd-01.jpg") !important;
 	background-size: cover;
