creates compenant card for donation method and array of all the donation methods to map over

--- a/src/components/donate/Donate.css
+++ b/src/components/donate/Donate.css
@@ -67,6 +67,12 @@ p {
     text-align: center;
 }
 
+.pay-option-logo {
+    height: 5rem;
+    width: 5rem;
+    display: block;
+}
+
 button {
     background-color: black;
     color: white;
