--- a/src/components/donate/Donate.css
+++ b/src/components/donate/Donate.css
@@ -13,6 +13,16 @@
     padding-bottom: 12rem;
 }
 
+@media only screen and (max-width: 768px){
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+}
+
+
+}
+
 .header {
     font-size: 4rem;
     font-weight: 700;
@@ -20,6 +30,15 @@
     padding: 6rem 0 0 4rem;
     margin-bottom: 3rem;
 
+}
+
+
+@media only screen and (max-width: 768px){
+    .header{
+    font-size: 2rem;
+    color: white;
+    font-weight: 600;
+    }
 }
 
 .inner-container{
@@ -32,13 +51,49 @@
     flex-direction: column;
 }
 
+@media only screen and (max-width: 768px){
+
+
+.inner-container{
+    background-color: white;
+    width: 90%;
+    height: contain;
+    margin: auto;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+}
+
 .text-image-container{
     display: flex;
+}
+
+@media only screen and (max-width: 768px){
+
+    .text-image-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 }
 
 .image {
     height: 15rem;
     width: 12rem;
+}
+
+
+@media only screen and (max-width: 768px){
+.image {
+    height: 15rem;
+    width: 12rem;
+    align-self: center;
+
+}
+
 }
 
 .text-next-to-image{
@@ -221,13 +276,32 @@ font-weight: normal;
     padding: .25rem 1.5rem;
     align-self: center;
     margin-top: 3rem;
+    font-size: 1rem;
+
 }
+
+@media only screen and (max-width: 768px){
+
+  .volunteer-button{
+      font-size: .75rem;
+  }
+
+}
+
 
 .volunteer-transparency{
     align-self: center;
     margin-top: 5rem;
 }
 
+
+
+@media only screen and (max-width: 768px){
+
+.thank-you-tag{
+display: none;
+}
+}
 
 .volunteer-script{
 
